# dotfiles

./: .gitignore  .gitmodules  Brewfile  Brewfile.lock.json  README.md  fzf-cd.yml  manage.sh  week.py
emacs/: .spacemacs
git/: .gitconfig  git-secrets-patterns.txt
gpg/.gnupg/: gpg-agent.conf
iterm/: ItermProfile.json
macos/: bootstrap.sh
node/: package-lock.json  package.json
node/.terminalizer/: config.yml
phoenix/: .phoenix.js  .stow-local-ignore
phoenix/spin2win/: package-lock.json  package.json
phoenix/spin2win/src/: config.ts
scripts/: pyproject.toml
scripts/scripts/: bytweet_graph.py  merge_twitter_csv.py  mergecsv.py  tweet_graph.py  twitter_quality.py
skhd/: .skhdrc
zsh/: .zshrc
zsh/lib/: functions.sh  zsh_plugins.txt
